samples/_failures_safe/1761648620_f50ede_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d194fb01.c: In function ‘main’:
./samples/SAFE/__tmp_d194fb01.c:134:28: error: ‘comp’ undeclared (first use in this function)
  134 |     double ratio = (double)comp
      |                            ^~~~
./samples/SAFE/__tmp_d194fb01.c:134:28: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d194fb01.c:134:5: error: expected ‘,’ or ‘;’ at end of input
  134 |     double ratio = (double)comp
      |     ^~~~~~
./samples/SAFE/__tmp_d194fb01.c:134:5: error: expected declaration or statement at end of input
